--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="container">
 						<div class="hero__outer">
 							<div class="hero__inner">
-								<h1 class="text-lg hero__title hero--boxed--md hero--bold">
+								<h1 class="text-lg hero__title hero--boxed--md hero--bold m-auto">
 									后潮科技
 								</h1>
 								<h3 class="hero__subtitle--uppercase text-rt">"致力于帮助年轻人追逐人生体验"</h3>
