--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<!-- end hero -->
 
 				<!-- Hero -->
-				<div class="section hero bg-img" style="background-image: url(img/office/team-info.png);">
+				<div class="section hero bg-img" style="background-image: url(img/office/team-info.jpg);">
 					<div class="container">
 						<div class="hero__outer">
 							<div class="hero__inner">
@@ -147,7 +147,7 @@
 				<!-- end hero -->
 
 				<!-- Hero -->
-				<div class="section hero bg-img" style="background-image: url(img/office/laptop-3196481.png);">
+				<div class="section hero bg-img" style="background-image: url(img/office/business-corp.jpg);">
 					<div class="container">
 						<div class="hero__outer">
 							<div class="hero__inner">
