--- a/index.html
+++ b/index.html
@@ -134,12 +134,38 @@
 				<!-- Hero -->
 				<div class="section hero bg-img" style="background-image: url(img/office/team-info.jpg);">
 					<div class="container">
-						<div class="hero__outer">
-							<div class="hero__inner">
-								<h3 class="hero__subtitle--uppercase">团队介绍</h3>
-								<h1 class="hero__title hero--boxed--md hero--bold">
-									团队信息
-								</h1>
+						<div class="row">
+							<div class="col-md-4">
+								<div class="hero__outer">
+									<div class="hero__inner">
+										<h3 class="hero__subtitle--uppercase">团队介绍</h3>
+										<h1 class="hero__title hero--boxed--md hero--bold">
+											团队信息
+										</h1>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-8">
+								<div id="owl-team-slider" class="owl-carousel owl-theme">
+									<div class="member m-auto">
+										<img class="member-avatar" src="img/avatar/JIA.jpg" alt="JIA" />
+										<div class="member-description">
+											<p>123123123213asdasdsadsadsadsa1</p>
+										</div>
+									</div>
+									<div class="member m-auto">
+										<img class="member-avatar" src="img/avatar/Vissun.jpg" alt="JIA" />
+										<div class="member-description">
+											<p>12312312321321</p>	
+										</div>
+									</div>
+									<div class="member m-auto">
+										<img class="member-avatar" src="img/avatar/Ecst.jpg" alt="JIA" />
+										<div class="member-description">
+											<p>123123123213asdasdsadsadsadsa1</p>
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
